test/transparentproxy/install/testdata/debian-12.ip6tables-nft.golden
*nat
:PREROUTING ACCEPT
:INPUT ACCEPT
:OUTPUT ACCEPT
:POSTROUTING ACCEPT
:KUMA_MESH_INBOUND -
:KUMA_MESH_INBOUND_REDIRECT -
:KUMA_MESH_OUTBOUND -
:KUMA_MESH_OUTBOUND_REDIRECT -
-A PREROUTING -p tcp -j KUMA_MESH_INBOUND
-A OUTPUT -p tcp -j KUMA_MESH_OUTBOUND
-A KUMA_MESH_INBOUND -p tcp -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_INBOUND_REDIRECT -p tcp -j REDIRECT --to-ports 15010
-A KUMA_MESH_OUTBOUND -s ::6/128 -o ifPlaceholder -j RETURN
-A KUMA_MESH_OUTBOUND ! -d ::1/128 -o ifPlaceholder -p tcp -m owner --uid-owner 5678 -j KUMA_MESH_INBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND -o ifPlaceholder -p tcp -m owner ! --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -m owner --uid-owner 5678 -j RETURN
-A KUMA_MESH_OUTBOUND -d ::1/128 -j RETURN
-A KUMA_MESH_OUTBOUND -j KUMA_MESH_OUTBOUND_REDIRECT
-A KUMA_MESH_OUTBOUND_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
